# CPP-Snake

./: .gitignore  CMakeLists.txt  build alias
app/: CMakeLists.txt  main.cpp
app/src/: CMakeLists.txt  Food.cpp  Food.h  Includes.h  Menu.cpp  Menu.h  Snake.cpp  Snake.h  SnakeBlocks.cpp  SnakeBlocks.h  leaderboard.cpp  leaderboard.h  parser.cpp
